tests/cases/pass/comparisons.cs
class Program {
    static void Main() {
        Console.WriteLine(1 == 1);
        Console.WriteLine(1 != 2);
        Console.WriteLine(1 < 2);
        Console.WriteLine(2 <= 2);
        Console.WriteLine(3 > 2);
        Console.WriteLine(3 >= 3);
    }
}
