tests/cases/fail/unsupported_list_method.cs
class Program {
    static void Main() {
        List<int> xs = new List<int>();
        xs.Add(1);
        xs.Foo();
    }
}
